--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <header>
         <meta charset = "UTF-8">
+        <meta http-equiv="refresh" content="10">
         <title>My Resume</title>
     </header>
     <body>
